
  The grub plugin handles the filesystems it needs itself, but doesn't
  mind if they're already mounted. The `virtual-filesystems` step is
  only needed when a Debian package is installed, possibly via
  Ansible, or some other command is run that needs `/proc` or one of
  the other virtual filesystems.

  This change should NOT require changes to existing, working .vmdb
  files.


Version 0.14.1, not yet released
------------------------------------

This is a bug fix release to fix bugs in the 0.14 release that slipped
through due to insufficient testing.

* The shell plugin source file was misnamed. Fixed now.

* Fixes to problems found while building real images. The new
  `check-external` script builds my own images, and Debian's Raspberry
  Pi images.


Version 0.14, released 2020-03-21
------------------------------------

It has been two years since the previous release. These release notes
are a little sketchy.

* All plugins now provide exactly one type of step. This is a little
  simpler than having multiple steps provided by the same plugin.
  Simplicity is good.

* There is now some better automated testing.

* vmdb2 now checks at start time that all required keys are set for
  all steps and that keys have values of the correct type.

* Source code for vmdb2 is now hosted on gitlab.com and git.liw.fi,
  moved there from GitHub.

* Fixed smoke test timeout for starting a VM to 5 min. The previous
  timeout (30 s) was short enough that tests often failed because of
  it.

* The `debootstrap` action now finishes with `apt-get update`. For
  some reason thing had changed so that this became necessary.

* Christian Schlüter added the optional `label` field to the `mkfs`
  step to set the filesystem label upon creation.

* Changed the `grub` step to take an optional `image-dev` field to
  override the heuristics for finding the device where GRUB is to be
  installed. This was necessary to allow vmdb2 to install Debian onto
  real hardware.
